-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.1
-
Windows 10 32 bit Release build
MSVC 2017
Microsoft (R) C/C++ Optimizing Compiler Version 19.14.26431 for x86
-
-
2d61f0a269e083b10cd560028f64940938ab7afd
When using 32bit build Qt, QWebEnginePage::print() does not print any text or text elements (textboxes, buttons, etc). Pictures are still properly printed.
64bit prebuilt Qt works fine.
Steps to reproduce:
- Run attached sample
- Print dialog opens up, press print
- EXPECTED: Page is properly printed
- ACTUAL: Only images are printed, all text and elements (textbox, buttons, icons, ...) are missing
| For Gerrit Dashboard: QTBUG-69639 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 235803,2 | Work around MSVC2017 optimizer bug when printing a page usind Pdfium | 65-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |