Work around MSVC2017 optimizer bug when printing a page usind Pdfium

On Windows MSVC2017 32bit release builds of WebEngine, printing to
a QPrinter instance only printed partial page content.

This ended up being a compiler / optimizer bug triggered in the
FX_atof function in
src/3rdparty/chromium/third_party/pdfium/core/fxcrt/fx_string.cpp
which resulted in returning float numbers without any digits past
the decimal point. Because of that, many size / offset calcuations
were wrong.

The fix is to remove a redundant 'strc[cc] == "."' check, which is
implcitly present in a previous if condition. This in turn stops
the compiler from generating incorrect code, and thus parsing
the digits past the decimal point.

Task-number: QTBUG-69639
Change-Id: I7908318b6e7ca58e81d951af784ed8dcd901e12c
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>