chromium/third_party/pdfium/core/fxcrt/fx_string.cpp
@@ -72,7 +72,7 @@ float StringToFloat(ByteStringView strc) {
     cc++;
   }
   int scale = 0;
-  if (cc < len && strc[cc] == '.') {
+  if (cc < len) {
     cc++;
     while (cc < len) {
       value += FractionalScale(scale, FXSYS_DecimalCharToInt(strc.CharAt(cc)));
